--- a/PMS/Views/Shared/_MainLayout.cshtml
+++ b/PMS/Views/Shared/_MainLayout.cshtml
@@ -8,6 +8,8 @@
         <link href="../../Content/menu.css" rel="stylesheet" type="text/css" />
         <link href="../../Content/style.css" rel="stylesheet" type="text/css" />
         <link href="../../Content/jquery-ui.css" rel="stylesheet" type="text/css" />
+        <link href="../../Content/tree.css" rel="stylesheet" type="text/css" />
+        <link href="../../Content/zTreeStyle.css" rel="stylesheet" type="text/css" />
         <script src="../../Scripts/jquery-latest.min.js" type="text/javascript"></script>
         <script src="../../Scripts/script.js" type="text/javascript"></script>
         @Styles.Render("~/Content/css")
