--- a/PMS/Views/Home/About.cshtml
+++ b/PMS/Views/Home/About.cshtml
@@ -32,3 +32,4 @@
         <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
     </ul>
 </aside>
+<p><a href="javascript:void(0);" class="close">Close this Window</a></p>
