--- a/PMS/Views/Shared/_MainLayout.cshtml
+++ b/PMS/Views/Shared/_MainLayout.cshtml
@@ -11,7 +11,9 @@
         <link href="../../Content/tree.css" rel="stylesheet" type="text/css" />
         <link href="../../Content/zTreeStyle.css" rel="stylesheet" type="text/css" />
         <script src="../../Scripts/jquery-latest.min.js" type="text/javascript"></script>
+        <script src="../../Scripts/jquery-ui.js" type="text/javascript"></script>
         <script src="../../Scripts/script.js" type="text/javascript"></script>
+        
         @Styles.Render("~/Content/css")
         @Scripts.Render("~/bundles/modernizr")
     </head>
@@ -26,7 +28,42 @@
             </div>
         </div>
 
-        @Scripts.Render("~/bundles/jquery")
+        <script type="text/javascript">
+
+            $.ajaxSetup({ cache: false });
+
+            $(document).ready(function () {
+                $(".PMSDailog").on("click", function (e) {
+                    e.preventDefault();
+
+                    $("<div></div>")
+                    .addClass("dialog")
+                    .attr("id", $(this)
+                    .attr("data-dialog-id"))
+                    .appendTo("body")
+                    .dialog({
+                        title: $(this).attr("data-dialog-title"),
+                        close: function () { $(this).remove(); },
+                        modal: true,
+                        height: 250,
+                        width: 900,
+                        left: 0
+
+                    })
+                    .load(this.href);
+                });
+
+                $(".close").on("click", function (e) {
+                    alert("here");
+                    e.preventDefault();
+                    $(this).closest(".dialog").dialog("close");
+                });
+            });
+            var CloseDialog = function (d) {
+                $('#'+d).dialog('close');
+            }
+    </script>
         @RenderSection("scripts", required: false)
+
     </body>
 </html>
